test/tests/stages/18_structures/invalid_types/extra_credit/other_features/switch_on_struct.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[40]:
  struct
  identifier(s)
  {
  int
  identifier(i)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  switch
  (
  identifier(x)
  )
  {
  case
  const int(1)
  :
  return
  const int(0)
  ;
  default
  :
  return
  const int(1)
  ;
  }
  }
